cabal-version:      3.4
name:               backend
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Ellis Kesterton
maintainer:         31514698+eayus@users.noreply.github.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable backend
    import:           warnings
    main-is:          Main.hs
    other-modules:
        -- Common,
        -- Func,
        -- GenRust,
        -- Imp,
        -- TCO,

        Common.Term,

        IR0.Term,
        IR0.Lower,

        IR1.Term,
        IR1.Lower,
    default-extensions:
        LambdaCase,
    build-depends:
        base,
    hs-source-dirs:   app
    default-language: GHC2021
