cabal-version:      3.4
name:               backend
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Ellis Kesterton
maintainer:         31514698+eayus@users.noreply.github.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable backend
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Common.Term,
        Common.Pretty,

        IR0.Term,
        IR0.Pretty,

        IR1.Term,
        IR1.Lower,
        IR1.Pretty,

        IR2.Term,
        IR2.Lower,
        IR2.Pretty,

        IR3.Term,
        IR3.Lower,
        IR3.Norm,
    default-extensions:
        DataKinds,
        DuplicateRecordFields,
        LambdaCase,
        NoFieldSelectors,
        OverloadedStrings,
        OverloadedRecordDot,
        TemplateHaskell,
    build-depends:
        base,
        data-fix,
        deriving-compat,
        hashable,
        mtl,
        prettyprinter,
        prettyprinter-ansi-terminal,
        unordered-containers,
    hs-source-dirs:   app
    default-language: GHC2021
